# sudopy

./: README.md  checker.py  game.py  pyproject.toml  serdeSudoku.py  simpleChecker.py  simpleSolver.py  sudoku.py  sudoku_example  sudopy.py  test_checker.py  test_clsSudoku.py  test_serdeSudoku.py  test_simpleChecker.py  test_simpleSolver.py  test_tui_app.py  tui_app.py  tui_app.tcss
.github/workflows/: ci.yml
